2003-06-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/pthread.cxx (pthread_self_info): Just add some comments so
	no-one's tempted to uncomment assert.
	(pthread_create): Verify that self is a valid POSIX thread when
	needed.

2003-03-20  Mark Salter  <msalter@redhat.com>

	* include/pthread.h: Avoid conflict with recently introduced gcc
	__thread keyword.

2003-03-13  Bart Veer  <bartv@ecoscentric.com>

	* include/export.h: Only export signal-related functions if
	CYGPKG_POSIX_SIGNALS is enabled.

2003-03-04  Gary Thomas  <gary@mlbassoc.com>

	* include/pthread.h: Rework prototypes to minimize namespace problems.

2003-03-03  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/signal2.c (cause_illegal_access): PowerPC only generates
	alignment exceptions in little-endian mode, so make that a special
	case.

	* tests/mutex3.c: Include POSIX headers before feature tests to
	prevent spurious CYG_TEST_NA.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/posix.sgml: Expunge EL/IX. Dead standard.
	* cdl/posix.cdl: Add doc link.

2003-02-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mutex.cxx: Include sched.hxx for scheduler lock/unlock primitives.
	Reported by Jani Monoses.

2003-02-10  Gary Thomas  <gary@mlbassoc.com>

	* tests/signal3.c (main): Reorg code so it builds with older GCC.

2003-01-31  Nick Garnett  <nickg@calivar.com>

	* src/time.cxx (alarm_action): Added call to
	cyg_posix_signal_sigwait() to wake up any sigwait()ing threads.

	* src/signal.cxx (cyg_posix_signal_sigwait): Added this function
	to export access to signal_sigwait conditional variable.
	(sigtimedwait): Added call to cyg_posix_timer_asr() to allow timer
	signals to be delivered here.

	* src/pprivate.h: Added prototype for cyg_posix_signal_sigwait().

	* cdl/posix.cdl:
	* tests/signal3.c: Added this program to test interaction of
	timers and signals, particularly sigwait(). Based on a test
	program from N.Suresh <nsuresh@cdotb.ernet.in>.
